@@ -40,6 +40,7 @@ version 2.6.6 (??/??/20??):
 	  interior-focus style property is diabled. (Gabriel Schulhof)
 	* Correctly handle a multiline text field being required in a
 	  request form.  (Thanks to Florian Zeitz for finding this problem)
+	* Search friends by email-addresses in the buddy list. (Luoh Ren-Shan)
 
 version 2.6.5 (01/08/2010):
 	libpurple:
